packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
.right-column {
  margin-left: 48px
}

.version-number {
  color: var(--welcome-page-ver);
  font-size: 19px;
  line-height: 26px;
  margin-bottom: 32px;
  padding-left: 2px;
  position: relative;
  top: -16px;
}

.section {
  margin-bottom: 34px;
  max-width: 100%;
  width: auto;

  a {
    color: var(--focused-selected-list-item-bg);
    min-width: 0;
    overflow: hidden;
    text-decoration: none;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;

    &.well {
      padding: 10px 0;
    }
  }
}

.well {
  background-color: var(--my-bots-well-bg);
  border: var(--my-bots-well-border);

  &::-webkit-scrollbar-thumb {
    background-color: transparent;
  }

  &:hover {
    &::-webkit-scrollbar-thumb {
      background-color: var(--my-bots-scrollbar-color);
    }
  }
}

.no-bots {
  font-style: italic;
  padding: 0 10px;
}

.recent-bots-list {
  max-height: 100px;
  overflow-x: hidden;
  overflow-y: auto;

  & > li {
    display: flex;
  }

  a {
    flex-shrink: 0;
  }
}

.recent-bot {
  border: 1px solid transparent;
  padding: 0 16px;
  position: relative;

  button {
    font-size: 13px;
  }
  &:hover {
    background-color: var(--my-bots-entry-bg);
    border: var(--my-bots-entry-border);

    .recent-bot-action-bar {
      display: block;
    }
  }

  > button {
      background-color: transparent;
      border: 1px solid transparent;
      color: var(--my-bots-entry-color);
      cursor: pointer;

    > span {
      font-weight: 600;

      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.recent-bot-action-bar {
  background-color: transparent;
  display: none;
  height: 100%;
  min-width: 16px;
  position: absolute;
  right: 0;
  top: 2px;
  width: auto;

  > button {
      border: 0;
      cursor: pointer;
      height: 0;
      padding: 0;
      width: 0;

    &:after {
      color: var(--tab-icon-color);
      content: "\2716";
      font-size: 12px;
      height: 16px;
      width: 8px;
      margin-right: 8px;
    }
  }
}

.recent-bot-path {
  color: var(--my-bots-path-color);
  cursor: text;
  display: inline-block;
  line-height: 22px;
  margin-left: 8px;
  opacity: 0.5;
  user-select: text;
}

.open-bot {
  height: 26px;
  margin-top: 24px;
  margin-bottom: 16px;
  width: 180px;
}

.cta-link {
  background-color: transparent;
  border: 1px solid transparent;
  color: var(--focused-selected-list-item-bg);
  cursor: pointer;
  font-weight: 600;
  padding: 0;
  font-size: 13px;
  white-space: normal;

    &:focus {
      outline: var(--p-button-border-focus);

    }

    &:hover {
      text-decoration: underline;
    }
}

.how-to-build-section {
  > h3 {
    font-size: 13px;
    font-weight: 600;
    letter-spacing: 0.35px;
    line-height: 16px;
    margin: 0 0 24px 0;
    text-transform: uppercase;
  }

  .step-container {
    align-items: stretch;
    display: flex;
    position: relative;

      .step-icon {
        display: flex;
        height: 38px;
        margin-right: 15px;
        width: 38px;

        > div {
          background-repeat: no-repeat;
          height: 30px;
          width: 30px;
        }

        > .build-plan01 {
          background-image: url('../../media/build_plan/bp_ic_01.svg');
        }

        > .build-plan02 {
          background-image: url('../../media/build_plan/bp_ic_02.svg');
        }

        > .build-plan03 {
          background-image: url('../../media/build_plan/bp_ic_03.svg');
        }

        > .build-plan04 {
          background-image: url('../../media/build_plan/bp_ic_04.svg');
        }

        > .build-plan05 {
          background-image: url('../../media/build_plan/bp_ic_05.svg');
        }

        > .build-plan06 {
          background-image: url('../../media/build_plan/bp_ic_06.svg');
        }
      }
      dl {
        border-left: 1px solid var(--welcome-how-to-border);
        display: block;
        margin: 0;
        padding: 0 24px;

      > dt::before {
        background-color: var(--welcome-page-bg);
        border: 1px solid var(--welcome-how-to-border);
        border-radius: 100%;
        content: '';
        left: 47px;
        height: 11px;
        position: absolute;
        width: 11px;
      }

      > .test-bullet::before {
        background-color: var(--welcome-how-to-test);
      }


      > dt {
        display: block;
        font-weight: 600;
        font-size: 13px;
        line-height: 18px;
      }

      > dd {
        font-size: 13px;
        line-height: 18px;
        margin-left: 0;
        padding-bottom: 22px;
      }
    }
  }

  .step-container:last-child dl {
    border-left: 1px solid transparent;
  }
}

.spacing {
  padding: 0 0 2px 2px;
}

.margin-fix {
  margin-left: 0;
}

